Mais testes, refactoring e bugfixes.